--- a/app/src/main/res/layout/all_countries_fragment.xml
+++ b/app/src/main/res/layout/all_countries_fragment.xml
@@ -19,16 +19,71 @@
         android:layout_height="match_parent"
         >
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:setVisibilityCase="@{viewModel.countriesResultVisibilityCase}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <TextView
+            android:id="@+id/message_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textSize="@dimen/_12ssp"
+            app:setHeaderMsg="@{viewModel.msg}"
+            app:setVisibilityCase="@{viewModel.countriesResultVisibilityCase}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/countries_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:setRvAdapter="@{adapter}"
+            android:background="@color/colorWhite"
+            android:backgroundTint="@color/colorWhite"
+            app:setRecyclerViewVisibilityCase="@{viewModel.countriesResultVisibilityCase}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_bar"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loading_lottie_animation_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:lottie_repeatMode="restart"
+            app:setVisibilityCase="@{viewModel.countriesResultVisibilityCase}"
+            app:lottie_fileName="countries_loading.json"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_bar"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/error_lottie_animation_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:lottie_repeatMode="restart"
+            app:setVisibilityCase="@{viewModel.countriesResultVisibilityCase}"
+            app:lottie_fileName="error_animation.json"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_bar"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
