--- a/app/src/main/res/layout/country_details_fragment.xml
+++ b/app/src/main/res/layout/country_details_fragment.xml
@@ -2,7 +2,14 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.fragments.countrydetails.CountryDetailsFragment">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.lgcinterview.letsgetcountries.ui.main.fragments.countrydetails.CountryDetailsViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -10,9 +17,53 @@
         >
 
         <TextView
+            android:id="@+id/country_name_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_20sdp"
+            android:text="@{viewModel.selectedCountry.name}"
+            android:textColor="@color/colorPrimary"
+            android:fontFamily="@font/gabriela"
+            android:textSize="@dimen/_18ssp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/question_animation"
+            android:layout_width="@dimen/_150sdp"
+            android:layout_height="@dimen/_150sdp"
+            app:lottie_fileName="question_mark.json"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_repeatMode="reverse"
+            app:layout_constraintTop_toBottomOf="@id/country_name_tv"
+            />
+
+        <TextView
+            android:id="@+id/capital_label_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_14ssp"
+            android:text="@string/capital_label"
+            android:fontFamily="@font/gabriela"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/country_name_tv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/question_animation"/>
+
+        <View
+            android:id="@+id/horizontal_line_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello" />
+            android:layout_height="@dimen/_3sdp"
+            android:background="@color/colorPrimary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/question_animation"
+            app:layout_constraintTop_toBottomOf="@id/capital_label_tv"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
