--- a/app/src/main/res/layout/rv_item_country.xml
+++ b/app/src/main/res/layout/rv_item_country.xml
@@ -9,8 +9,13 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@android:style/Widget.Material.Button.Borderless.Colored"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:outlineProvider="bounds"
+        android:clipToPadding="false"
+        android:elevation="@dimen/_1sdp"
+        android:layout_margin="@dimen/_15sdp"
         >
 
         <ImageView
@@ -18,6 +23,9 @@
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_margin="@dimen/_10sdp"
+            android:padding="@dimen/_10sdp"
+            android:src="@drawable/blue_earth"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -26,29 +34,84 @@
             android:id="@+id/country_name_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_16sdp"
+            android:textSize="@dimen/_11ssp"
             android:textStyle="bold"
             android:text="@{country.name}"
+            android:textColor="@color/colorDarkGrey"
+            android:fontFamily="@font/gabriela"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
             app:layout_constraintStart_toEndOf="@id/country_icon_image_view"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/label_capital_tv"
             />
+
+        <TextView
+            android:id="@+id/label_capital_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_9ssp"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:textStyle="bold"
+            android:fontFamily="@font/gabriela"
+            android:text="@string/capital_label"
+            app:layout_constraintStart_toEndOf="@id/country_icon_image_view"
+            app:layout_constraintTop_toBottomOf="@id/country_name_text_view"
+            app:layout_constraintBottom_toTopOf="@id/label_region_tv"
+            />
+
+
+        <TextView
+            android:id="@+id/label_region_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:textSize="@dimen/_10ssp"
+            android:textStyle="bold"
+            android:fontFamily="@font/gabriela"
+            android:text="@string/region_label"
+            app:layout_constraintStart_toEndOf="@id/country_icon_image_view"
+            app:layout_constraintTop_toBottomOf="@id/country_name_text_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
 
         <TextView
             android:id="@+id/country_capital_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/_10ssp"
             android:text="@{country.capital}"
-            app:layout_constraintStart_toEndOf="@id/country_icon_image_view"
-            app:layout_constraintTop_toBottomOf="@id/country_capital_text_view"
+            android:fontFamily="@font/gabriela"
+            app:layout_constraintStart_toEndOf="@id/label_capital_tv"
+            app:layout_constraintTop_toTopOf="@id/label_capital_tv"
+            app:layout_constraintBottom_toBottomOf="@id/label_capital_tv"
             />
 
         <TextView
             android:id="@+id/country_region_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{country.capital}"
-            app:layout_constraintStart_toEndOf="@id/country_icon_image_view"
-            app:layout_constraintTop_toBottomOf="@id/country_capital_text_view"
+            android:text="@{country.region}"
+            android:fontFamily="@font/gabriela"
+            android:textSize="@dimen/_9ssp"
+            app:layout_constraintStart_toEndOf="@id/label_region_tv"
+            app:layout_constraintTop_toTopOf="@id/label_region_tv"
+            app:layout_constraintBottom_toBottomOf="@id/label_region_tv"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_right_arrow"
+            android:layout_margin="@dimen/_20sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
